--- a/docs/_includes/contact.html
+++ b/docs/_includes/contact.html
@@ -3,7 +3,8 @@
   <ul>
     <li><span class="li-icon">{% include svg/pin-alt.svg %}</span><span>Kansas City, MO, 64152</span></li>
     <li><span class="li-icon">{% include svg/phone.svg %}</span><span>+1 913-203-0408</span></li>
-    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:bbwashi@outlook.com">username@domain.com</a></li>
-    <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://darbumas.github.io">https://darbumas.github.io</a></li>
+    <li><span class="li-icon">{% include svg/mail.svg %}</span><a href="mailto:bbwashi@outlook.com">bbwashi@outlook.com</a></li>
+    <li><span class="li-icon">{% include svg/internet.svg %}</span><a href="https://darbumas.github.io">darbumas.github.io</a></li>
+    <li><span class="li-icon">{% include svg/linkedin.svg %}</span><a href="https://linkedin/in/bbwashi">/in/bbwashi</a></li>
   </ul>
 </div>
